# Website-Link-Scraper

./: .replit  init_db.py  main.py  pyproject.toml  readme.md  replit.nix
documents/: add_documents_from_source.py  create_compressed_document_gpt.py  create_document_section_table.py  create_document_sections.py  create_sections_gpt.py  documents_model.py  documents_routes.py  extract_full_text.py  extract_missing_full_text.py  getPDFurl.py  pdf_processor.py  summarize_document_gpt.py
documents/templates/: documents.html  view_document.html
requirements/: chat_GPT_example.py  create_requirements.py  create_requirements_for_entire_doc.py  requirements_model.py  requirements_routes.py
source_websites/: add_found_urls.py  scrape_missing_data.py  scrape_website.py  source_website_model.py  source_website_routes.py
source_websites/templates/: source_websites.html
templates/: header.html
